# d3rs

./: Cargo.toml
examples/: categorised_music_revenues.rs  html.rs  scales.rs  sine_wave_cli.rs  sine_wave_svg.rs  svg.rs
src/: chart.rs  continuous_mapper.rs  lib.rs  render_element.rs  render_error.rs  render_style.rs
src/data_collections/: categorised_value.rs  categorised_values.rs  mod.rs  segmented_value.rs
src/render_elements/: mod.rs  render_group.rs
src/scales/: api.rs  band.rs  linear.rs  mod.rs
src/svg/: circle.rs  document.rs  group.rs  hyperlink.rs  length_or_percentage.rs  line.rs  macros.rs  mod.rs  styles.rs  text.rs
