[package]
name = "d3rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1"
# serde-xml-rs = "0.5"
# serde = "1.0"
# serde_derive = "1.0"
simple_xml_serialize = "0.3"
simple_xml_serialize_macro = { version = "0.3", features = ["process_options"]}
